# freebck

./: Cargo.toml  LICENSE  build.rs
.github/workflows/: rust.yml
src/: constants.rs  lib.rs  main.rs  storage.rs
src/cmd/: backup.rs  common.rs  restore.rs
src/data/: backup.proto  config.rs
src/storage/: file.rs  test.rs  util.rs
src/util/: fs.rs  hash.rs  time.rs
test_data/test_backup_content/: README
tests/: backup.rs
