[package]
name = "freebck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
prost = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
test-log = "0.2.13"
